Made `projectFileExtensions` into `extraProjectFileExtensions`, which add to existing ones.